src/scss/ia/_dev.scss
.ia-single {

    #add_developer {
        overflow: auto;
        .btn {
            margin-top: 1px;
        }
        margin-bottom: 1em;
    }

    label.details__label {
        font-weight: 500;
        margin-top: 10px;
        margin-bottom: 5px;
        display: inline-block;
    }

    .top__categories, .top__repo, .top__milestone {
        .frm__select {
            position: relative;
            bottom: 1px;
        }
    }

    .wicked-border {
        border: 1px solid $platinum;
        border-radius: 3px;
        padding: 2em;
        padding-top: 0;

        > .ia-single--header {
            margin-top: 0;
            position: relative;
            bottom: 12px;
            right: 1em;
            background-color: white;
            display: inline-block;
            padding-left: 1em;
            padding-right: 1em;

            #devpage-commit-details {
                padding-left: 1em;
            }
        }
    }

    .ia-single--testing {
        .testing-section {
            margin-bottom: 1em;
        }
    }

    .ia-triggers {
        margin-bottom: 2em;
    }

    .error-notification {
        color: $red;
    }

    input[type="text"]{
        &::-ms-clear { display: none; } // For IE 10
    }

    .asterisk:after {
        content: " *";
        color: $red;
    }

    .no-available {
        color: $grey;
    }

    .ia-single--details {
        margin-bottom: 2em;
    }

    .edit-popup {
        .developer {
            margin-bottom: 1em;
        }

        .frm__input {
            input {
                background-color: transparent;
                border: none;
                outline: none;
                width: 14em;
            }

            .ddgsi-close {
                position: relative;
                right: 6px;
                font-size: 10px;
                cursor: pointer;
                bottom: 26px;
            }

            .ddgsi-check-sign {
                color: $green;
                position: relative;
                right: 3px;
                font-size: 16px;
                cursor: pointer;
                bottom: 23px;
            }

            .ddgsi-close-bold {
                color: $red;
                position: relative;
                right: 3px;
                font-size: 15px;
                cursor: pointer;
                font-weight: bold;
                bottom: 24px;
            }
        }
    }

    .ia-single--testing {
        margin-bottom: 2em;

        .ia-single--header {
            margin-top: 0;
        }
    }

    h3.second-header {
        text-transform: uppercase;
        font-size: 12px;
        color: $grey;
        margin-top: 1em;
    }

    #producer-button {
        width: 78%;
    }

    .cancel-save {
        margin-top: 1em;

        .cancel-button-popup, .save-button-popup {
            width: 25%;
        }
    }

    .new_input {
        margin-top: 0.5em;
    }

    #contributors-popup {
        position: fixed;
        z-index: 1000;
        padding: 1em;
        top: 50%;
        left: 50%;
        margin-left: -177px;
        margin-top: -181px;
        background-color: $white;
        width: 330px;
        box-shadow: 0 0 10px $grey;

        div {
            margin-left: 0;
        }

        .ia-single--header {
            margin-top: 0.5em;
        }
    }

    .developer_username {
        width: 100%;

        .frm__input {
            width: 100%;
        }
    }

    #edit-modal {
        height: 100%;
        width: 100%;
        position: fixed;
        zoom: 1;
        background-color: rgba(68, 149, 212, 0.6);
        z-index: 100;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        cursor: pointer;

        margin-left: 0;
    }

    .frm__label {
        display: block;
        font-weight: initial;
        font-size: 1em;
    }

    /* Make the text smaller and thinner */
    .devpage-edit, .devpage-edit-popup, .devpage-commit, .devpage-cancel, .devpage-commit-details, .devpage-cancel-details, .devpage-forum {
        font-weight: initial;
        font-size: 95%;
    }

    /* Add some space between the header and the "Edit" / "Commit" buttons */
    .devpage-edit, .devpage-commit {
        margin-left: 3px;
    }

    /* The textarea should have a maximum width to prevent it from overlapping
       on the right column
       */
    #description-textarea {
        max-width: 100%;
        height: 5em;
        width: 100%;

        /* The design calls for a rounded border */
        border-radius: 3px;
    }

    .ia-single--details {
        &:focus {
            outline: none;
        }
    }

    #other_queries-group, #triggers-group {
        overflow: auto;
        overflow-y: hidden;

        li {
            display: inline-block;
            margin-top: 10px;
            margin-bottom: 1px;
        }

        li.hide {
            display: none;
        }
    }

    #add_example_button, #add_trigger_button {
        padding-right: 8px;
        padding-left: 8px;
        padding-top: 1px;
        padding-bottom: 1px;

        .ddgsi-plus {
            position: relative;
            top: 2px;
        }
    }

    .ia-examples, .ia-triggers {
        input {
            &.example_query {
                text-transform: capitalize;
            }
        }

        .other_queries input {
            text-transform: capitalize;
        }

        input.example_query, input.group-vals {
            background-color: $silver;
            border: none;
            outline: none;
            padding: 0.6em;
            width: auto;
            color: $slate-light;
            border-radius: 3px;
            border: 1px solid $silver;

            &:focus {
                background-color: $silver-light;
                border: 1px solid $grey;
            }
        }
    }

    .delete-tag {
        display: inline-block;
        position: relative;
        right: 21px;
        font-size: 9px;
        cursor: pointer;
        height: 100%;
        top: 50%;
    }

    .ia-examples {
        .example_query {
            display: inline-block;
        }
    }

    #ia-single-top {
        /* We need to set the color of the dropdown to the background color. */
        .frm__select {
            background-color: transparent;
            border-color: transparent;
            color: $white;

            padding-right: 30px;

            select {
                color: $white;
                text-transform: capitalize;
                /* There's too much space inside the dropdown. */
                padding: 0;

                option {
                    background-color: #FAFAFA;
                    color: #333;
                }
            }
        }

        .topic-container {
            .frm__select {
                &:after {
                    content: "";
                }

                background-color: $blue;
                padding-left: 5px;
                padding-right: 20px;
            }
        }

        /* The + button should have a custom color. */
        #add_topic {
            background-color: #3a7fb4;
            border-color: transparent;
            color: $white;

            position: relative;
            bottom: 1px;

            padding-right: 8px;
            padding-left: 8px;
            padding-top: 1px;
            padding-bottom: 1px;
            margin-right: 10px;

            .ddgsi-plus {
                position: relative;
                top: 2px;
            }
        }

        /* The input text for the name shouldn't look like an input field.
           This means transparent background and bigger text.
          */
        .ia-single--name input.frm__input {
            background-color: transparent;
            border-color: transparent;
            font-size: 2em;
            padding: 0;
            color: #fff;
            font-weight: 500;
            height: 1.5em;
            line-height: 1;
            position: relative;
            bottom: 7px;
        }

        .topic-remove {
            position: relative;
            top: 2px;
        }

        .topic-container, .topic-separator {
            display: inline-block;

            .hide {
                display: none;
            }
        }

        .edit-container {
            .view-json {
                margin-bottom: 1em;
            }

            #js-top-details-submit {
                margin-right: 0.5em;
            }
        }
    }
}

$frm__input-size: 24em;
.frm__input {
    width: 100%;
    height: 2.3em;
}

.frm__input--half {
    @extend .frm__input;
    width: $frm__input-size / 2;
}

#metafields {
    margin-bottom: 0;
    padding-bottom: 0;
    padding-top: 0;
}

textarea[data-panel="base_info"] {
    width: 100%;
}

.ia-single--name {
    h2 {
        .frm__input {
            font-size: 0.45em;
            width: 15em;
        }
    }

    .frm__select {
        vertical-align: top;
    }
}

#toggle-devpage-static {
    left: 4px;
}

/* This is for the buttons at the top. Since they're black when they're clicked on, the text should be white. */

.dev-special-permissions__toggle-view__button.disabled, .special-permissions__toggle-view__button.disabled, .pipeline__toggle-view__button.disabled {
    color: $white;
}

div[name="topic"].topic {
    box-shadow: none;
    height: 2.15em;

    .ddgsi {
        vertical-align: sub;
    }
}

#repo-select {
    text-transform: capitalize;
}

.dev_milestone-container__body__readonly__a {
    text-transform: capitalize;
}

.ia-single.devpage .developer {
    .frm__select {
        background: $green;
        width: 7em;
    }

    .frm__select.invalid {
        background: $red-dark;
    }

    .invalid input.frm__input {
        border-color: $red-dark;
    }

    span.developer_username input.frm__input {
        width: 10.5em;
    }
}

.editpage span.developer_username input[type="text"] {
    width: 4.5em;
}

.invalid {
    select.available_types {
        background-color: $red-dark;
    }
}

.docs-link-icon {
    color: $grey-light;
}

#advanced {
    overflow: hidden;
    width: 100%;
    margin-top: 2em;

    .check-txt {
        height: 2.3em;
        display: inline-block;
    }
}

#contributors {
    margin-bottom: 2.5em;
}

.ia-single--wide {
    margin-top: 2em;
}

#contributors.minmargin {
    margin-bottom: 2em;
}

#contributors.fixheight {
    margin-bottom: 7.5em;
}

.field-container {
    .frm__select {
        width: 8.5em;
    }
}

.fixlineheight {
    line-height: 2.25em;
}

#triggers-input {
    margin-bottom: 0.7em;
}

.fixexamplequery {
    width: 59.3%;
}

.ia-single.devpage .ia-single--header {
    color: $grey;
    font-size: 0.857em;
    margin: 0.7em 0px 0px;
}

.ia-single.devpage .ia-single--name {
    margin-bottom: 0px;
    margin-top: 0.5em;
}

